--- a/app/src/main/res/layout/fragment_levels.xml
+++ b/app/src/main/res/layout/fragment_levels.xml
@@ -5,7 +5,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/levels"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
     </FrameLayout>
 
