--- a/app/src/main/res/layout/row_level_r.xml
+++ b/app/src/main/res/layout/row_level_r.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+        <variable name="level" type="com.aucc.game.data.level.Level"/>
+    </data>
+
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -9,28 +13,29 @@
             android:padding="15dp"
             android:clickable="true"
             android:focusable="true"
-            android:background="?android:attr/selectableItemBackground">
+            android:background="?android:attr/selectableItemBackground"
+            android:baselineAligned="false">
 
         <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
+                        android:text='@{"[" + level.title + "]"}'
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="[ Excellent Quest 3 ]"
                         android:textSize="15sp"
                         android:layout_marginBottom="5dp"
                         android:textColor="@color/colorAccent"/>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorTextPrimary"
-                    android:textSize="15sp"
-                    android:text="Lorem ipsum dolor sit amet, vim eu justo saperet detracto, nec no vero soleat eleifend. Eam verterem recusabo an."/>
+                        android:text="@{level.desc}"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/colorTextPrimary"
+                        android:textSize="15sp"/>
 
         </LinearLayout>
 
@@ -42,12 +47,12 @@
                 android:background="@drawable/ic_hexa">
 
             <TextView
+                    android:text="@{String.valueOf(level.id)}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="1"
                     android:layout_gravity="center"
                     android:textColor="@color/colorTextPrimary"
-                    android:textSize="15sp"/>
+                    android:textSize="17sp"/>
 
         </FrameLayout>
 
