--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
         tools:context=".ui.main.MainActivity">
 
     <android.support.design.widget.CoordinatorLayout
+            android:id="@+id/coordinator"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorBackground">
@@ -53,6 +54,7 @@
                 android:layout_gravity="bottom"
                 android:background="@color/colorBackground"
                 android:theme="@style/Widget.BottomNavigationView"
+                app:layout_behavior="com.aucc.game.util.BottomNavBehavior"
                 app:menu="@menu/bottom_menu"
                 app:itemTextColor="@drawable/bottom_nav_item_back"
                 app:itemIconTint="@drawable/bottom_nav_item_back"/>
