--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimary">#40464E</color>
     <color name="colorPrimaryDark">#383d45</color>
     <color name="colorAccent">#9acc14</color>
@@ -14,4 +14,6 @@
 
     <color name="colorTextPrimary">#fff</color>
     <color name="colorTextSecondary">#949ba2</color>
+
+    <color name="design_snackbar_background_color" tools:override="true">@color/colorBackgroundDark</color>
 </resources>
