added bash simulator (problematic)

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/home"
+    <item android:id="@+id/homeFragment"
           android:icon="@drawable/baseline_bug_report_24"
           android:title="Home"/>
 
-    <item android:id="@+id/levels"
+    <item android:id="@+id/levelsFragment"
           android:icon="@drawable/baseline_code_24"
           android:title="Quests"/>
-
-    <item android:id="@+id/recent"
-          android:icon="@drawable/baseline_public_24"
-          android:title="Lorem"/>
 
 </menu>
