--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,12 +37,16 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <FrameLayout
+        <fragment
                 android:id="@+id/host"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                app:navGraph="@navigation/nav_graph"
+                app:defaultNavHost="true"
                 android:layout_marginBottom="46dp"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
 
         <android.support.design.widget.BottomNavigationView
                 android:id="@+id/bottomNavigationView"
