--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -43,16 +43,51 @@
                         app:cardBackgroundColor="@color/colorBackgroundDark"
                         app:cardCornerRadius="5dp">
 
-                    <EditText
-                            android:text="root@aucc:~$ "
+                    <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:minHeight="100dp"
-                            android:gravity="start|top"
-                            android:textColor="@color/colorAccent"
-                            android:textSize="15sp"
-                            android:background="@null"
-                            android:padding="15dp"/>
+                            android:padding="15dp"
+                            android:orientation="vertical">
+
+                        <TextView
+                                android:id="@+id/terminalHistory"
+                                android:text="Shell initialized!"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorTextPrimary"
+                                android:lineSpacingExtra="2dp"
+                                android:lineSpacingMultiplier="1.5"
+                                android:layout_marginBottom="6dp"
+                                android:textSize="15sp"/>
+
+                        <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                            <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textColor="@color/colorAccent"
+                                    android:lineSpacingExtra="2dp"
+                                    android:lineSpacingMultiplier="1.5"
+                                    android:text="root@aucc:~/$ "
+                                    android:textSize="15sp"/>
+
+                            <EditText
+                                    android:id="@+id/terminal"
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:gravity="start|top"
+                                    android:textColor="@color/colorTextPrimary"
+                                    android:textSize="15sp"
+                                    android:background="@null"/>
+
+                        </LinearLayout>
+
+                    </LinearLayout>
 
                 </android.support.v7.widget.CardView>
 
