--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -11,6 +11,7 @@
             android:background="@color/colorBackground">
 
         <android.support.v4.widget.NestedScrollView
+                android:id="@+id/nestedScrollView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -50,16 +51,10 @@
                             android:padding="15dp"
                             android:orientation="vertical">
 
-                        <TextView
+                        <android.support.v7.widget.RecyclerView
                                 android:id="@+id/terminalHistory"
-                                android:text="Shell initialized!"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:textColor="@color/colorTextPrimary"
-                                android:lineSpacingExtra="2dp"
-                                android:lineSpacingMultiplier="1.5"
-                                android:layout_marginBottom="6dp"
-                                android:textSize="15sp"/>
+                                android:layout_height="wrap_content"/>
 
                         <LinearLayout
                                 android:layout_width="match_parent"
