--- a/app/src/main/res/layout/row_terminal.xml
+++ b/app/src/main/res/layout/row_terminal.xml
@@ -9,9 +9,10 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="2dp">
+            android:paddingBottom="4dp">
 
         <TextView
+                android:visible="@{!command.isResponse}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorAccent"
