--- a/app/src/main/res/layout/fragment_levels.xml
+++ b/app/src/main/res/layout/fragment_levels.xml
@@ -5,10 +5,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+        <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/swipeRefreshLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
             <android.support.v7.widget.RecyclerView
                     android:id="@+id/levels"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
+
+
+        </android.support.v4.widget.SwipeRefreshLayout>
 
     </FrameLayout>
 
