added snackbar message and profile fragment

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -9,4 +9,8 @@
           android:icon="@drawable/baseline_code_24"
           android:title="Quests"/>
 
+    <item android:id="@+id/profileFragment"
+          android:icon="@drawable/baseline_vpn_key_24"
+          android:title="Profile"/>
+
 </menu>
