--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,6 +6,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+        <android.support.v4.widget.NestedScrollView
+                android:id="@+id/nestedScrollView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
             <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -18,8 +23,9 @@
                         android:layout_height="80dp"
                         android:layout_marginTop="35dp"
                         android:layout_marginBottom="20dp"
+                        android:src="@drawable/outline_account_circle_24"
                         app:civ_border_width="2dp"
-                        app:civ_border_color="@color/colorAccent"/>
+                        app:civ_border_color="@color/white"/>
 
                 <TextView
                         android:layout_width="wrap_content"
@@ -82,6 +88,8 @@
 
 
             </LinearLayout>
+
+        </android.support.v4.widget.NestedScrollView>
 
     </FrameLayout>
 
