--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="white">#ffffff</color>
 
     <color name="colorBackground">#1e2125</color>
-    <color name="colorBackgroundDark">#141A22</color>
+    <color name="colorBackgroundDark">#17191d</color>
     <color name="colorBackgroundPanel">#80343C41</color>
     <color name="colorBackgroundInput">#394147</color>
 
